--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Car_Rental_Management
 excludes=
+file.reference.LGoodDatePicker-10.4.1.jar=G:\\Program Files\\NetBeans-11.2\\netbeans\\ide\\modules\\ext\\LGoodDatePicker-10.4.1.jar
+file.reference.swingx-1.6.jar=G:\\Program Files\\NetBeans-11.2\\netbeans\\ide\\modules\\ext\\swingx-1.6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.swingx-1.6.jar}:\
+    ${file.reference.LGoodDatePicker-10.4.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
