--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,4 @@
 compile.on.save=true
+file.reference.LGoodDatePicker-10.4.1.jar=F:\\Coding\\Car-Rental-Management-System\\LGoodDatePicker-10.4.1.jar
+file.reference.swingx-1.6.jar=F:\\Coding\\Car-Rental-Management-System\\swingx-1.6.jar
 user.properties.file=C:\\Users\\gng\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
