--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,12 +34,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Car_Rental_Management
 excludes=
 file.reference.LGoodDatePicker-10.4.1.jar=G:\\Program Files\\NetBeans-11.2\\netbeans\\ide\\modules\\ext\\LGoodDatePicker-10.4.1.jar
+file.reference.mssql-jdbc-8.2.2.jre11.jar=C:\\Users\\gng\\Downloads\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre11.jar
+file.reference.sqljdbc_8.2-enu=C:\\Users\\gng\\Downloads\\sqljdbc_8.2\\enu
 file.reference.swingx-1.6.jar=G:\\Program Files\\NetBeans-11.2\\netbeans\\ide\\modules\\ext\\swingx-1.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.swingx-1.6.jar}:\
-    ${file.reference.LGoodDatePicker-10.4.1.jar}
+    ${file.reference.LGoodDatePicker-10.4.1.jar}:\
+    ${file.reference.sqljdbc_8.2-enu}:\
+    ${file.reference.mssql-jdbc-8.2.2.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
