--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,10 @@
 compile.on.save=true
-file.reference.LGoodDatePicker-10.4.1.jar=F:\\Coding\\Car-Rental-Management-System\\LGoodDatePicker-10.4.1.jar
-file.reference.swingx-1.6.jar=F:\\Coding\\Car-Rental-Management-System\\swingx-1.6.jar
-user.properties.file=C:\\Users\\gng\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
+do.depend=false
+do.jar=true
+do.jlink=false
+file.reference.LGoodDatePicker-10.4.1.jar=E:\\Github\\Car-Rental-Management-System\\LGoodDatePicker-10.4.1.jar
+file.reference.mssql-jdbc-8.2.2.jre11.jar=E:\\Github\\Car-Rental-Management-System\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre11.jar
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\asadb\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
