--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Car Rental Management
+application.vendor=asadb
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,17 +33,14 @@ dist.jar=${dist.dir}/Car_Rental_Management.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Car_Rental_Management
+endorsed.classpath=
 excludes=
 file.reference.LGoodDatePicker-10.4.1.jar=G:\\Program Files\\NetBeans-11.2\\netbeans\\ide\\modules\\ext\\LGoodDatePicker-10.4.1.jar
 file.reference.mssql-jdbc-8.2.2.jre11.jar=C:\\Users\\gng\\Downloads\\sqljdbc_8.2\\enu\\mssql-jdbc-8.2.2.jre11.jar
-file.reference.sqljdbc_8.2-enu=C:\\Users\\gng\\Downloads\\sqljdbc_8.2\\enu
-file.reference.swingx-1.6.jar=G:\\Program Files\\NetBeans-11.2\\netbeans\\ide\\modules\\ext\\swingx-1.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.swingx-1.6.jar}:\
     ${file.reference.LGoodDatePicker-10.4.1.jar}:\
-    ${file.reference.sqljdbc_8.2-enu}:\
     ${file.reference.mssql-jdbc-8.2.2.jre11.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
